@@ -26,6 +26,15 @@ dependencies {
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
+tasks.withType(JavaCompile).configureEach {
+	options.compilerArgs += ["--add-modules", "jdk.incubator.vector"]
+}
+
 tasks.named('test') {
 	useJUnitPlatform()
+	jvmArgs += ["--add-modules", "jdk.incubator.vector"]
+}
+
+tasks.named('bootRun') {
+	jvmArgs += ["--add-modules", "jdk.incubator.vector"]
 }
